Fixes #578 [Templates] - Add support for pattern hint

--- a/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/index.html.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/ui/perspectives/views/master-manage/details/index.html.template
@@ -88,7 +88,7 @@
 #elseif($property.widgetType == "TEXTAREA")
 						<div class="form-group">
 							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
-							<textarea #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end #if($property.widgetPattern && $property.widgetPattern != "")pattern="${property.widgetPattern}"#end #if($property.widgetLength && $property.widgetLength != "")maxlength="${property.widgetLength}"#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()"></textarea>
+							<textarea #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end #if($property.widgetPattern && $property.widgetPattern != "")pattern="${property.widgetPattern}" title="${property.widgetPattern}"#end #if($property.widgetLength && $property.widgetLength != "")maxlength="${property.widgetLength}"#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()"></textarea>
 						</div>
 #elseif($property.widgetType == "NUMBER")
 						<div class="form-group">
@@ -108,7 +108,7 @@
 #elseif($property.widgetType == "TEL")
 						<div class="form-group">
 							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
-							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="tel" pattern="\+?[0-9 \-]{9,16}" #if($property.widgetLength && $property.widgetLength != "")maxlength="${property.widgetLength}"#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
+							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="tel" pattern="\+?[0-9 \-]{9,16}" title="\+?[0-9 \-]{9,16}" #if($property.widgetLength && $property.widgetLength != "")maxlength="${property.widgetLength}"#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
 						</div>
 #elseif($property.widgetType == "WEEK")
 						<div class="form-group">
@@ -153,7 +153,7 @@
 #else
 						<div class="form-group">
 							<label>#if($property.widgetLabel)${property.widgetLabel}#else${property.name}#end</label>
-							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="text" #if($property.widgetPattern && $property.widgetPattern != "")pattern="${property.widgetPattern}"#end #if($property.widgetLength && $property.widgetLength != "")maxlength="${property.widgetLength}"#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
+							<input #if($property.dataNotNull)required#end #if($property.isCalculatedProperty)readonly#end type="text" #if($property.widgetPattern && $property.widgetPattern != "")pattern="${property.widgetPattern}" title="${property.widgetPattern}"#end #if($property.widgetLength && $property.widgetLength != "")maxlength="${property.widgetLength}"#end class="form-control" placeholder="Enter #if($property.widgetLabel)${property.widgetLabel.toLowerCase()}#else${property.name.toLowerCase()}#end" ng-model="entity.${property.name}" ng-change="updateCalculatedProperties()">
 						</div>
 #end
 #end
