Fixes #579 [Templates] - Add support for Color widget type

--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/entity.js.template
@@ -133,7 +133,7 @@ function validateEntity(entity) {
 	var isValid = true;
 #foreach ($property in $properties)
 #if($property.widgetPattern && $property.widgetPattern != "")
-	isValid = isValid && entity.${property.name}.match(/^${property.widgetPattern}${dollar}/) !== null;
+	isValid = isValid && entity.${property.name} && entity.${property.name}.match(/^${property.widgetPattern}${dollar}/) !== null;
 #break
 #end 
 #end
