--- a/api/api-facade/api-platform/pom.xml
+++ b/api/api-facade/api-platform/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>dirigible-core-generation-velocity</artifactId>
             <version>5.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-local</artifactId>
+            <version>5.1.0-SNAPSHOT</version>
+        </dependency>
         
     </dependencies>
 
