[Releng] SAP CF - Removes port 8081

--- a/releng/sap-cf-all/Dockerfile
+++ b/releng/sap-cf-all/Dockerfile
@@ -4,6 +4,6 @@
 ARG DIRIGIBLE_VERSION=latest
 FROM dirigiblelabs/dirigible-base-platform-sap-cf:$DIRIGIBLE_VERSION
 
-EXPOSE 8080 8081
+EXPOSE 8080
 
 CMD ["catalina.sh", "jpda", "run"]
