Fixes #585 [Releng] SAP Cloud Foundry - Runtime Only Image

--- a/pom.xml
+++ b/pom.xml
@@ -596,6 +596,8 @@
 		<module>releng/sap-all</module>
 		<module>releng/sap-all-ephemeral</module>
 		<module>releng/sap-cf-all</module>
+		<module>releng/sap-cf-base</module>
+		<module>releng/sap-cf-runtime</module>
 		<module>releng/sap-cms</module>
 		<module>releng/server-all</module>
 		<module>releng/server-keycloak-all</module>
