--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -186,5 +186,10 @@
 			<artifactId>dirigible-ide-ui-websockets</artifactId>
 			<version>5.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide-ui-form-builder</artifactId>
+			<version>5.1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
