--- a/releng/sap-cf-all/pom.xml
+++ b/releng/sap-cf-all/pom.xml
@@ -37,6 +37,26 @@
 
 	<dependencies>
 
+		<!-- Platform -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-core</artifactId>
+		    <version>${logback.version}</version>
+		    <scope>compile</scope>
+		</dependency>
+		<dependency>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>${logback.version}</version>
+		    <scope>compile</scope>
+		</dependency>
+
 		<!-- Cloud Foundry - Base -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
