--- a/resources/resources-all/pom.xml
+++ b/resources/resources-all/pom.xml
@@ -101,5 +101,10 @@
             <artifactId>dirigible-resources-theme-fiori</artifactId>
             <version>5.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-resources-jquery-ui</artifactId>
+            <version>5.1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
