--- a/releng/sap-cf-all/pom.xml
+++ b/releng/sap-cf-all/pom.xml
@@ -11,7 +11,7 @@
 
   <name>Releng - SAP - CF - All</name>
 	<artifactId>dirigible-sap-cf-all</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<build>
 		<finalName>ROOT</finalName>
@@ -25,7 +25,25 @@
 					<target>${java.version}</target>
 				</configuration>
 			</plugin>
-			
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<failOnMissingWebXml>true</failOnMissingWebXml>
+					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+					<warName>ROOT</warName>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-a-war</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>war</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<resources>
 	        <resource>
