--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -97,6 +97,11 @@
 		 	<version>5.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide-ui-documents-ext-content-type-ms</artifactId>
+			<version>5.1.0-SNAPSHOT</version>
+	   </dependency>
+		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-ide-ui-bpm</artifactId>
 		 	<version>5.1.0-SNAPSHOT</version>
