--- a/pom.xml
+++ b/pom.xml
@@ -599,6 +599,7 @@
 		<module>releng/sap-cf-base</module>
 		<module>releng/sap-cf-runtime</module>
 		<module>releng/sap-cms</module>
+		<module>releng/sap-runtime-ephemeral</module>
 		<module>releng/server-all</module>
 		<module>releng/server-keycloak-all</module>
 		<module>releng/server-runtime</module>
