--- a/templates/template-all/pom.xml
+++ b/templates/template-all/pom.xml
@@ -1,7 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
 		<artifactId>dirigible-template-parent</artifactId>
@@ -11,7 +12,7 @@
 
 	<name>Templates</name>
 	<artifactId>dirigible-templates</artifactId>
-    <packaging>jar</packaging>
+	<packaging>jar</packaging>
 
 	<scm>
 		<url>${content.scm.url}</url>
@@ -33,114 +34,116 @@
 	<dependencies>
 		<!-- Templates Plugins -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-hello-world</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-hello-world</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-http-client</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-http-client</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-database-access</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-database-access</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-database-table</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-database-table</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-database-view</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-database-view</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-html</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-html</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-bookstore</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-bookstore</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-job</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-job</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-listener</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-listener</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-extension-view</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-extension-view</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-extension-perspective</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-extension-perspective</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-application-launchpad</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-application-launchpad</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-template-application-schema</artifactId>
 			<version>5.2.0-SNAPSHOT</version>
-	   </dependency>
-	   <dependency>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-template-application-dao</artifactId>
 			<version>5.2.0-SNAPSHOT</version>
-	   </dependency>
-	   <dependency>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-template-application-data</artifactId>
 			<version>5.2.0-SNAPSHOT</version>
-	   </dependency>
-	   <dependency>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-template-application-rest</artifactId>
 			<version>5.2.0-SNAPSHOT</version>
-	   </dependency>
-	   <dependency>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-template-application-feed</artifactId>
 			<version>5.2.0-SNAPSHOT</version>
-	   </dependency>
-	   <dependency>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-template-application-ui-angular</artifactId>
 			<version>5.2.0-SNAPSHOT</version>
-	   </dependency>
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-application-angular</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
-		</dependency>
-		<!-- <dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-application-openui5</artifactId>
-		 	<version>3.2.0-SNAPSHOT</version>
-		</dependency> -->
-		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-template-mobile-hello-world</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>template-form-builder-angularjs</artifactId>
-		 	<version>5.2.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-application-angular</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
+		</dependency>
+		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-template-application-openui5</artifactId> 
+			<version>3.2.0-SNAPSHOT</version> </dependency> -->
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-mobile-hello-world</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>template-form-builder-angularjs</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-application-odata</artifactId>
+			<version>5.2.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
