OData rest layer added by default in the full stack application

--- a/templates/template-application-angular/src/main/resources/template-application-angular/project.json
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/project.json
@@ -18,6 +18,12 @@
             "url": "https://github.com/dirigiblelabs/template-application-ui-angular.git",
             "type": "git",
             "branch": "master"
+        },
+        {
+            "guid": "template-application-odata",
+            "url": "https://github.com/dirigiblelabs/template-application-odata.git",
+            "type": "git",
+            "branch": "master"
         }
     ]
 }
