--- a/templates/template-application-odata/src/main/resources/template-application-odata/odata/application.odata.template
+++ b/templates/template-application-odata/src/main/resources/template-application-odata/odata/application.odata.template
@@ -1,18 +1,100 @@
+#set ($associationsCount = 0)
+#foreach ($model in $models)
+#if($model.type != "REPORT")
+#foreach ($relationModel in $models)
+#if($relationModel.type != "REPORT" && $relationModel.name != $model.name)
+#foreach ($relationProperty in $relationModel.properties)
+#if($relationProperty.relationshipEntityName == $model.name)
+#set ($associationsCount = $associationsCount + 1)
+#end
+#end
+#end
+#end
+#end
+#end
 {
     "namespace": "${odataNamespace}",
     "entities": [
 #foreach ($model in $models)
 #if($model.type != "REPORT")
-#if($foreach.isFirst())
-            {
+        {
+            "name": "${model.name}",
+            "alias": "${model.name}",
+            "table": "${model.dataName}",
+#set ($haveNavigations = false)
+#foreach ($relationModel in $models)
+#if($relationModel.type != "REPORT" && $relationModel.name != $model.name)
+#foreach ($relationProperty in $relationModel.properties)
+#if($relationProperty.relationshipEntityName == $model.name)
+#set ($haveNavigations = true)
+#end
+#end
+#end
+#end
+#if ($haveNavigations)
+            "navigations": [
+#foreach ($relationModel in $models)
+#if($relationModel.type != "REPORT" && $relationModel.name != $model.name)
+#foreach ($relationProperty in $relationModel.properties)
+#if($relationProperty.relationshipEntityName == $model.name)
+                {
+                    "name": "${relationModel.name}",
+                    "association": "${model.name}${relationModel.name}"
+#if($foreach.hasNext)
+                },
 #else
- {
-#end
-                "name": "${model.name}",
-                "alias": "${model.name}",
-                "table": "${model.dataName}"
-}#if($foreach.hasNext),#end
+                }
 #end
 #end
-]
+#end
+#end
+#end
+            ]
+#else
+            "navigations": []
+#end
+#if($foreach.hasNext)
+        },
+#else
+        }
+#end
+#end
+#end
+    ],
+#if ($associationsCount == 0)
+    "associations": []
+#else
+    "associations": [
+#foreach ($model in $models)
+#if($model.type != "REPORT")
+#foreach ($relationModel in $models)
+#if($relationModel.type != "REPORT" && $relationModel.name != $model.name)
+#foreach ($relationProperty in $relationModel.properties)
+#if($relationProperty.relationshipEntityName == $model.name)
+        {
+            "name": "${model.name}${relationModel.name}",
+            "from": {
+                "entity": "${model.name}",
+                "property": "#foreach ($property in $model.properties)#if ($property.dataPrimaryKey || $property.dataPrimaryKey == "true")${property.name}#end#end",
+                "multiplicity": "1"
+            },
+            "to": {
+                "entity": "${relationModel.name}",
+                "property": "${relationProperty.name}",
+                "multiplicity": "*"
+            }
+#if($associationsCount > 1)
+        },
+#set ($associationsCount = $associationsCount - 1)
+#else
+        }
+#end
+#end
+#end
+#end
+#end    
+#end
+#end
+#end
+    ]
 }
