--- a/templates/template-application-schema/src/main/resources/template-application-schema/data/application.schema.template
+++ b/templates/template-application-schema/src/main/resources/template-application-schema/data/application.schema.template
@@ -1,22 +1,24 @@
+#set ($foreignKeysCount = 0)
+#foreach ($model in $models)
+#if($model.type != "REPORT")
+#foreach ($property in $model.properties)
+#if($property.relationshipEntityName)
+#set ($foreignKeysCount = $foreignKeysCount + 1)
+#end
+#end
+#end
+#end
 {
     "schema": {
         "structures": [
 #foreach ($model in $models)
 #if($model.type != "REPORT")
-#if($foreach.isFirst())
             {
-#else
- {
-#end
                 "name": "${model.dataName}",
                 "type": "TABLE",
                 "columns": [
 #foreach ($property in $model.properties)
-#if($foreach.isFirst())
                     {
-#else
- {
-#end
                         "type": "${property.dataType}",
 #if($property.dataLength)
                         "length": ${property.dataLength},
@@ -41,20 +43,73 @@
                         "nullable": true,
 #end
                         "name": "${property.dataName}"
-                    }#if($foreach.hasNext),#end
-#end
-]
-            }#if($foreach.hasNext),#end
+#if($foreach.hasNext)
+                    },
 #else
- {
+                    }
+                ]
+#end
+#end
+#if($foreach.hasNext)
+            },
+#else
+#if($foreignKeysCount > 0)
+            },
+#else
+            }
+#end
+#end
+#else
+            {
                 "name": "${model.dataName}",
                 "type": "VIEW",
-                "columns": [{
-                    "query": "${model.dataQuery}"
-                }]
-            }#if($foreach.hasNext),#end
+                "columns": [
+                    {
+                        "query": "${model.dataQuery}"
+                    }
+                ]
+#if($foreach.hasNext)
+            },
+#else
+#if($foreignKeysCount > 0)
+            },
+#else
+            }
 #end
 #end
-]
+#end
+#end
+#foreach ($model in $models)
+#if($model.type != "REPORT")
+#foreach ($property in $model.properties)
+#if($property.relationshipEntityName)
+#set ($foreignKeysCount = $foreignKeysCount - 1)
+            {
+                "name": "${property.relationshipName}",
+                "type": "foreignKey",
+                "table": "${model.dataName}",
+                "constraintName": "${property.relationshipName}",
+                "columns": "${property.dataName}",
+#foreach ($relationModel in $models)
+#if($relationModel.type != "REPORT" && $relationModel.name != $model.name)
+#foreach ($relationProperty in $relationModel.properties)
+#if($property.relationshipEntityName == $relationModel.name)
+                "referencedTable": "${relationModel.dataName}",
+                "referencedColumns": "#foreach ($relationIdProperty in $relationModel.properties)#if ($relationIdProperty.dataPrimaryKey || $relationIdProperty.dataPrimaryKey == "true")${relationIdProperty.name}#end#end"
+#break
+#end
+#end
+#end
+#end
+#if($foreignKeysCount >= 1)
+            },
+#else
+            }
+#end
+#end
+#end
+#end
+#end
+        ]
     }
 }
