--- a/api/api-facade/api-all/pom.xml
+++ b/api/api-facade/api-all/pom.xml
@@ -52,6 +52,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-http-async</artifactId>
+            <version>5.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-facade-indexing</artifactId>
             <version>5.3.0-SNAPSHOT</version>
         </dependency>
