--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -20,6 +20,7 @@
 		<module>api-core</module>
 		<module>api-database</module>
 		<module>api-http</module>
+		<module>api-http-async</module>
 		<module>api-tests</module>
 		<module>api-utils</module>
 		<module>api-io</module>
