--- a/ide/ui/ide-group-cms/pom.xml
+++ b/ide/ui/ide-group-cms/pom.xml
@@ -46,5 +46,10 @@
 		 	<artifactId>dirigible-ide-ui-documents</artifactId>
 		 	<version>5.3.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-ide-ui-documents-ext-content-type-ms</artifactId>
+		 	<version>5.3.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
