--- a/templates/template-application-ui-angular/src/main/resources/template-application-ui-angular/api/launchpad/views.js.template
+++ b/templates/template-application-ui-angular/src/main/resources/template-application-ui-angular/api/launchpad/views.js.template
@@ -24,6 +24,17 @@ for (var j = 0; viewExtensions !== null && j < viewExtensions.length; j++) {
 	views.push(view);
 }
 
+views = views.sort((a, b) => {
+	if (!a.order) {
+		return 1;
+	} else if (!b.order) {
+		return -1;
+	} else if (!a.order && !b.order) {
+		return 0;
+	}
+	return a.order - b.order;
+});
+
 response.println(JSON.stringify(views));
 
 function getRelativePath(pathSegments) {
@@ -33,3 +44,4 @@ function getRelativePath(pathSegments) {
 	}
 	return relativePath;
 }
+
