--- a/templates/template-application-ui-angular/src/main/resources/template-application-ui-angular/ui/perspectives/views/master-manage/details/extensions/view.js.template
+++ b/templates/template-application-ui-angular/src/main/resources/template-application-ui-angular/ui/perspectives/views/master-manage/details/extensions/view.js.template
@@ -13,6 +13,7 @@ exports.getView = function(relativePath) {
 		id: "{{name}}",
 		name: "{{menuLabel}}",
 		label: "{{menuLabel}}",
+		order: {{menuIndex}},
 		factory: "frame",
 		region: "center-bottom",
 		link: relativePath + "services/v4/web/{{projectName}}/ui/{{perspectiveName}}/views/master/details/{{name}}/index.html"
