--- a/templates/template-all/pom.xml
+++ b/templates/template-all/pom.xml
@@ -145,5 +145,40 @@
 			<artifactId>dirigible-template-application-odata</artifactId>
 			<version>5.3.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-openui5-wizard</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-openui5-simple-form</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-openui5-tiles</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-openui5-planning-calendar</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-openui5-list</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-openui5-master-detail</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-openui5-table</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
