--- a/templates/template-application-odata/src/main/resources/template-application-odata/odata/application.odata.template
+++ b/templates/template-application-odata/src/main/resources/template-application-odata/odata/application.odata.template
@@ -22,6 +22,23 @@
             "name": "${model.name}",
             "alias": "${model.name}",
             "table": "${model.dataName}",
+            "properties": [
+#foreach($property in $model.properties)
+                {
+                    "name": "${property.name}",
+#if($property.dataPrimaryKey)
+                    "column": "${property.dataName}"
+#else
+                    "column": "${property.dataName}",
+                    "nullable": ${property.dataNullable}
+#end
+#if($foreach.hasNext)
+                },
+#else
+                }
+#end
+#end
+            ],
 #set ($navigationsCount = 0)
 #set ($haveNavigations = false)
 #foreach ($relationModel in $models)
