--- a/api/api-facade/api-all/pom.xml
+++ b/api/api-facade/api-all/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>dirigible-api-facade-net</artifactId>
             <version>5.3.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-facade-kafka</artifactId>
+            <version>5.3.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
