--- a/ext/ext-all/pom.xml
+++ b/ext/ext-all/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>dirigible-ext-qunit</artifactId>
 			<version>5.3.0-SNAPSHOT</version>
 	   </dependency>
+	   <dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ext-kafka</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+	   </dependency>
 	</dependencies>
 
 	<properties>
