--- a/ext/ext-modules/pom.xml
+++ b/ext/ext-modules/pom.xml
@@ -40,6 +40,7 @@
 		<module>ext-acorn</module>
 		<module>ext-jasmine</module>
 		<module>ext-qunit</module>
+		<module>ext-kafka</module>
 	</modules>
 
 	<profiles>
