--- a/templates/template-all/pom.xml
+++ b/templates/template-all/pom.xml
@@ -180,5 +180,10 @@
 			<artifactId>dirigible-template-openui5-table</artifactId>
 			<version>5.3.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-template-websocket</artifactId>
+			<version>5.3.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
