Fixes #621 [Templates] DAO - Add support for autoIncrement property

--- a/templates/template-application-dao/src/main/resources/template-application-dao/data/dao/entity.js.template
+++ b/templates/template-application-dao/src/main/resources/template-application-dao/data/dao/entity.js.template
@@ -47,6 +47,9 @@ var dao = daoApi.create({
 #if($property.dataPrimaryKey)
 			id: true,
 #end
+#if($property.dataAutoIncrement)
+			autoIncrement: true,
+#end
 #if($property.dataNotNull)
 			required: true
 #end
