[API/Templates] Adds backward compatible support for 'autoIncrement' property #620, #621

--- a/templates/template-application-dao/src/main/resources/template-application-dao/data/dao/entity.js.template
+++ b/templates/template-application-dao/src/main/resources/template-application-dao/data/dao/entity.js.template
@@ -47,8 +47,12 @@ var dao = daoApi.create({
 #if($property.dataPrimaryKey)
 			id: true,
 #end
+#if($property.dataPrimaryKey)
 #if($property.dataAutoIncrement)
 			autoIncrement: true,
+#else
+			autoIncrement: false,
+#end
 #end
 #if($property.dataNotNull)
 			required: true
