Fixes #625 [IDE] Welcome Page - Templates Ordering

--- a/templates/template-hello-world/src/main/resources/template-hello-world/service.js.template
+++ b/templates/template-hello-world/src/main/resources/template-hello-world/service.js.template
@@ -1,5 +1,5 @@
-var response = require('http/v4/response');
+var response = require("http/v4/response");
 
-response.println('Hello World');
+response.println("Hello World");
 response.flush();
 response.close();
