Fixes #626 [IDE] About - Add Commit Id Info

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,19 @@
 							</dependency>
 						</dependencies>
 					</plugin>
+					<plugin>
+						<groupId>pl.project13.maven</groupId>
+						<artifactId>git-commit-id-plugin</artifactId>
+						<version>4.0.2</version>
+						<executions>
+							<execution>
+								<id>get-the-git-infos</id>
+								<goals>
+									<goal>revision</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
