--- a/releng/trial-all/src/main/resources/dirigible.properties
+++ b/releng/trial-all/src/main/resources/dirigible.properties
@@ -11,6 +11,7 @@
 # General
 DIRIGIBLE_PRODUCT_NAME=${project.title}
 DIRIGIBLE_PRODUCT_VERSION=${project.version}
+DIRIGIBLE_PRODUCT_COMMIT_ID=${git.commit.id}
 DIRIGIBLE_PRODUCT_TYPE=all
 DIRIGIBLE_INSTANCE_NAME=trial
 DIRIGIBLE_DATABASE_PROVIDER=local
