--- a/pom.xml
+++ b/pom.xml
@@ -598,6 +598,7 @@
 		<module>modules/commons</module>
 		<module>modules/cms</module>
 		<module>modules/bpm</module>
+		<module>modules/security</module>
 
 		<module>groups/runtime-all</module>
 		<module>groups/runtime-javascript</module>
